<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kubaspatny.startupanimation.SendMessageActivity">

    <EditText
        android:id="@+id/mMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/username_edittext_bg"
        android:maxLines="4"
        android:hint="@string/edittext_newmessage"/>

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/mButtonSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_send"
        android:textColor="@android:color/white"
        custom:pb_textComplete="@string/button_send_complete"
        custom:pb_textProgress="@string/button_send_sending"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorPressed="@color/blue_pressed"
        />





</RelativeLayout>
