<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:background="@color/nuntius_main"
    tools:context="com.kubaspatny.startupanimation.activity.MainActivity">

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:indeterminate="true"
        android:padding="0dp"
        android:layout_margin="0dp"
        app:spb_color="@color/nuntius_main_shade"
        app:spb_sections_count="3"
        app:spb_speed="1.0"
        app:spb_stroke_width="4dp"
        app:spb_stroke_separator_length="7dp"
        app:spb_reversed="true"
        app:spb_mirror_mode="true"
        app:spb_progressiveStart_activated="false"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"

        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/nuntius_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/edittext_username"
                android:textColor="@color/white"
                android:background="@drawable/username_edittext_bg"
                android:padding="12dp"
                />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button_bg"
                android:text="@string/button_register"/>

        </LinearLayout>

        <Button
            android:id="@+id/skip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/button_skip"/>

    </FrameLayout>

</RelativeLayout>
